objects/DocuSign_Setting__mdt/DocuSign_Setting__mdt.object-meta.xml
<CustomObject>
    <label>DocuSign Setting</label>
    <pluralLabel>DocuSign Settings</pluralLabel>
</CustomObject>