objects/DocuSign_Setting__mdt/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>