objects/DocuSign_Setting__mdt/fields/Base_URI__c.field-meta.xml
<CustomField>
    <fullName>Base_URI__c</fullName>
    <label>Base URI</label>
    <required>true</required>
    <type>Url</type>
</CustomField>