objects/DocuSign_Setting__mdt/fields/Generate_Signers__c.field-meta.xml
<CustomField>
    <fullName>Generate_Signers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Signers</label>
    <type>Checkbox</type>
</CustomField>