objects/DocuSign_Setting__mdt/fields/Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Key__c</fullName>
    <label>Integrator Key</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>