objects/DocuSign_Setting__mdt/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>